S12P11A609-199 [backend] 질문 카테고리 관련 메소드 구현