@@ -2,8 +2,12 @@ package com.ssafy.d3v.backend.question.service;
 
 import com.ssafy.d3v.backend.question.entity.Job;
 import com.ssafy.d3v.backend.question.entity.JobRole;
+import com.ssafy.d3v.backend.question.entity.Question;
+import com.ssafy.d3v.backend.question.entity.QuestionJob;
+import com.ssafy.d3v.backend.question.entity.Skill;
 import com.ssafy.d3v.backend.question.repository.JobRepository;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -12,7 +16,26 @@ import org.springframework.stereotype.Service;
 public class JobService {
     private final JobRepository jobRepository;
 
-    public List<JobRole> getAllJobs() {
-        return jobRepository.findAll().stream().map(Job::getJobRole).toList();
+    public List<Job> getAllJobs() {
+        return jobRepository.findAll();
+    }
+
+    public List<Question> getQuestionsByJob(String jobRole) {
+        Job job = jobRepository.findByJobRole(JobRole.valueOf(jobRole.toUpperCase()))
+                .orElseThrow(() -> new IllegalArgumentException("Invalid Job Role"));
+
+        return job.getQuestionJobs().stream()
+                .map(QuestionJob::getQuestion)
+                .collect(Collectors.toList());
+    }
+
+    public List<Skill> getSkillsByJobs(List<String> jobs) {
+        List<JobRole> jobRoles = jobs.stream()
+                .map(role -> JobRole.valueOf(role.toUpperCase())) // 문자열을 대문자로 변환 후 Enum으로 매핑
+                .toList();
+
+        return jobRepository.findSkillsByJobRoles(jobRoles);
     }
 }
+
+
